app/assets/stylesheets/products/_show.sass
.show-product-page
  font-size: 14px

  .row
    margin-top: 10px

  .shadow
    margin: 0 auto 10px

  .product-sidebar

    p
      font-size: 16px
      margin: 4px 0 10px

    dt, dd
      text-transform: uppercase
      margin-bottom: 10px

    dt
      color: $dark-blue-color

  .product-title
    color: $green-color
    font-size: 20px
    text-transform: uppercase
    margin: 4px 0 10px

  .product-box-shadow
    margin: 12px auto

  .product-about

    h3
      font-size: 18px
      font-weight: bold
      color: $dark-blue-color
      padding-bottom: 4px

    p
      margin-bottom: 12px
      font-size: 16px

    dl.dl-horizontal
      font-size: 16px

      dt, dd
        margin-bottom: 4px

      dt
        font-size: 16px
        font-weight: bold
        text-align: left
        color: $dark-blue-color

